tests/baselines/reference/rangeTypeFunctionDeclarations.errors.txt
tests/cases/compiler/rangeTypeFunctionDeclarations.ts(3,3): error TS2345: Argument of type 'number' is not assignable to parameter of type '(> 0)'.
tests/cases/compiler/rangeTypeFunctionDeclarations.ts(8,3): error TS2345: Argument of type 'number' is not assignable to parameter of type '(> 0)'.
tests/cases/compiler/rangeTypeFunctionDeclarations.ts(10,3): error TS2345: Argument of type '(>= 0)' is not assignable to parameter of type '(> 0)'.
tests/cases/compiler/rangeTypeFunctionDeclarations.ts(18,5): error TS2322: Type '(< 1)' is not assignable to type '(< 0)'.


==== tests/cases/compiler/rangeTypeFunctionDeclarations.ts (4 errors) ====
    declare function a(arg: (> 0)): void;
    let a1 = 1;
    a(a1);
      ~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '(> 0)'.
    let a2: (> 1) = 2;
    a(a2);
    
    let a3 = 0;
    a(a3);
      ~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '(> 0)'.
    let a4: (>= 0) = 0;
    a(a4);
      ~~
!!! error TS2345: Argument of type '(>= 0)' is not assignable to parameter of type '(> 0)'.
    
    
    declare function b(): (< 1);
    let b1: (< 1) = b();
    let b2: (<= 1) = b();
    let b3: (< 2) = b();
    
    let b4: (< 0) = b();
        ~~
!!! error TS2322: Type '(< 1)' is not assignable to type '(< 0)'.
    